fixed backface-visibility on Safari

--- a/css/projects.css
+++ b/css/projects.css
@@ -68,6 +68,7 @@
 .front,
 .back {
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     position: absolute;
     top: 0;
     left: 0;
